objects/simplesurvey__Survey__c.object
<CustomObject>
    <description>Simple Survey</description>
    <fields>
        <fullName>Account_First_Name__c</fullName>
        <formula>simplesurvey__Account__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Communication_Ease_and_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease and timeliness of communication with your Advising team</inlineHelpText>
        <label>Adv - Communication Ease and Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adv_Information_Clarity_Completeness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The clarity and completeness of the information and expectations regarding the services/products you purchased</inlineHelpText>
        <label>Adv - Information Clarity - Completeness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adv_Knowledge_Level__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of service knowledge of your Advising team</inlineHelpText>
        <label>Adv - Knowledge Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adv_Professionalism_and_Friendliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of professionalism and friendliness of your Advising team</inlineHelpText>
        <label>Adv - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_NPS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee mentioned in the survey.</description>
        <inlineHelpText>Employee mentioned in the survey.</inlineHelpText>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bkg_Communication_Ease_and_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease and timeliness of communication with your Bookkeeper</inlineHelpText>
        <label>Bkg - Communication Ease and Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bkg_Draft_Financials_Quality__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The quality of work done on your draft financials</inlineHelpText>
        <label>Bkg - Draft Financials Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bkg_Draft_Financials_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The timeliness of the completion of your draft financials</inlineHelpText>
        <label>Bkg - Draft Financials Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bkg_Professionalism_and_Friendliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of professionalism and friendliness of the Bookkeeping department</inlineHelpText>
        <label>Bkg - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bookkeeping Record</label>
        <referenceTo>Bookkeeping__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_NPS_CAM__c</fullName>
        <description>SCH-0032
Pulls the NPS CAM that was added to the case when the Survey was first emailed.</description>
        <formula>simplesurvey__Case__r.NPS_CAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESP_Communication_Ease_and_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease and timeliness of communication with the Estate Planning department</inlineHelpText>
        <label>ESP - Communication Ease and Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESP_Information_clarity__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The clarity of the information provided</inlineHelpText>
        <label>ESP - Information clarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESP_Professionalism_and_Friendliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of professionalism and friendliness of the Estate Planning department</inlineHelpText>
        <label>ESP - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Surveys3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Living_Trust_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Living Trust Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source_Survey__c</fullName>
        <formula>TEXT(simplesurvey__Account__r.Main_Lead_Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Survey__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>How likely are you to recommend Anderson Business Advisors to a friend or colleague based on your most recent experience?</inlineHelpText>
        <label>Opportunity Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source_Survey__c</fullName>
        <formula>simplesurvey__Account__r.Original_Campaign_Source__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Survey_Score__c</fullName>
        <description>Field for 8x8 phone scores.</description>
        <label>Phone Survey Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatQ_Answer_satisfaction__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>Your question was answered to the level of your satisfaction</inlineHelpText>
        <label>PlatQ - Answer satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatQ_Ease_of_Submitting_Question__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease of submitting your question through the Platinum Portal</inlineHelpText>
        <label>PlatQ - Ease of Submitting Question</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatQ_Ease_of_finding_answer__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease of finding the answer to the question you submitted</inlineHelpText>
        <label>PlatQ - Ease of finding answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatQ_Response_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The timeliness of the response to your question</inlineHelpText>
        <label>PlatQ - Response Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platinum_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platinum Question</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Surveys3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platinum_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platinum Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check below to have a QA Manager contact you within 24 business hours</inlineHelpText>
        <label>QA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Owner__c</fullName>
        <formula>IF(TEXT(Source__c) = &apos;Platinum Question&apos;,    Platinum_Question__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Platinum_Question__r.Owner:User.LastName ,NULL)</formula>
        <label>Question Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNW_Advisor_Level_of_Assistance__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of assistance provided to you by your Renewals Advisor</inlineHelpText>
        <label>RNW - Advisor Level of Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNW_Ease_of_Paying_Invoice__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease of paying your renewal invoice</inlineHelpText>
        <label>RNW - Ease of Paying Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNW_Overall_satisfaction_with_Advisor__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>Your overall satisfaction with your Renewals Advisor</inlineHelpText>
        <label>RNW - Overall satisfaction with Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNW_Professionalism_and_Friendliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of professionalism and friendliness of your Renewals Advisor</inlineHelpText>
        <label>RNW - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNW_Renewal_date_communication__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The communication of your upcoming renewal dates</inlineHelpText>
        <label>RNW - Renewal date communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVC_LC_Assistance_provided__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of assistance provided to you by your Law Coordinator</inlineHelpText>
        <label>SVC - LC Assistance provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVC_LC_Communication_Ease_Timeliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The ease and timeliness of communication with your Law Coordinator</inlineHelpText>
        <label>SVC - LC Communication Ease -Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVC_LC_Professionalism_Friendliness__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The level of professionalism and friendliness of your Law Coordinator</inlineHelpText>
        <label>SVC - LC Professionalism - Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Business Continuity Task</fullName>
                    <isActive>false</isActive>
                    <label>Business Continuity Task</label>
                </value>
                <value>
                    <fullName>Entity Formation</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                    <isActive>false</isActive>
                    <label>Platinum</label>
                </value>
                <value>
                    <fullName>Platinum Question</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Renewal Sale</fullName>
                    <isActive>false</isActive>
                    <label>Renewal Sale</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Welcome Call Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>Used to record the source / type of the survey.</description>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Return_Completion_and_Timeliness__c</fullName>
        <inlineHelpText>The timeliness of the completion of your return(s)</inlineHelpText>
        <label>Tax - Return Completion and Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Return_Quality__c</fullName>
        <inlineHelpText>The quality of work done on your return(s)</inlineHelpText>
        <label>Tax - Return Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Team_Communication__c</fullName>
        <inlineHelpText>The ease and timeliness of communication with your Tax team</inlineHelpText>
        <label>Tax - Communication Ease and Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Team_Professionalism_and_Frndly__c</fullName>
        <inlineHelpText>The level of professionalism and friendliness of your Tax team</inlineHelpText>
        <label>Tax - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Call_Professionalism_and_Frndli__c</fullName>
        <inlineHelpText>The level of professionalism and friendliness you received during your introductory call</inlineHelpText>
        <label>WLC - Professionalism and Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Call_Service_Agent_Communication__c</fullName>
        <inlineHelpText>The ease and timeliness of communication with your service agent</inlineHelpText>
        <label>WLC - Welcome Call Agent Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Call_clarity_and_expectations__c</fullName>
        <inlineHelpText>The clarity of the information and expectations received during your introductory call</inlineHelpText>
        <label>WLC - Welcome Call clarity - expectation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NPS_Rating_Scale_0_10_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Human_Confidence_Score__c</fullName>
        <description>Automatically populated when ReCaptcha is enabled.</description>
        <inlineHelpText>Values closer to 1 represent a high confidence that the survey taker is human, while values closer to 0 indicate the likely involvement of an email scanner/bot. Negative values indicate invalid Site/Secret Keys.</inlineHelpText>
        <label>Human Confidence Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__IP_Address_2__c</fullName>
        <description>Replaces the original IP Address field in versions prior to version 2.59</description>
        <label>IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__IP_Address__c</fullName>
        <description>The IP Address of the survey submitter.</description>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__NPS_Factor__c</fullName>
        <description>Used in reports and dashboards to calculate the Net Promoter Score.</description>
        <formula>if( simplesurvey__Survey_Score__c &lt;=6,-1,
if(simplesurvey__Survey_Score__c &lt;=8,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Net_Promoter_System__c</fullName>
        <description>Used in reports and dashboards to display the Net Promoter Score.</description>
        <formula>if( simplesurvey__Survey_Score__c &lt;=6,&quot;Detractor&quot;,
if(simplesurvey__Survey_Score__c &lt;=8,&quot;Passive&quot;,&quot;Promoter&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Promoter System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Rating_Scale__c</fullName>
        <description>Rating scale used for a given survey record.</description>
        <inlineHelpText>Rating scale used for a given survey record.</inlineHelpText>
        <label>Rating Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>0-10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Referrer__c</fullName>
        <description>The URL of the document that loaded the current document</description>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Status__c</fullName>
        <description>This field will be used to track the status of a survey and is reserved for future use.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Comments__c</fullName>
        <inlineHelpText>Please provide any additional feedback regarding your experience (optional)</inlineHelpText>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Score__c</fullName>
        <label>Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__User_Agent__c</fullName>
        <description>The user agent of the survey submitter (name, version and platform of the browser)</description>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Simple Survey</label>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>NAME</columns>
        <columns>simplesurvey__Survey_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>simplesurvey__Record_Owner__c</columns>
        <columns>simplesurvey__Case__c</columns>
        <columns>simplesurvey__Account__c</columns>
        <columns>simplesurvey__Contact__c</columns>
        <columns>simplesurvey__Survey_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <nameField>
        <displayFormat>S{00000000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simple Surveys</pluralLabel>
    <recordTypes>
        <fullName>Anderson_NPS</fullName>
        <active>true</active>
        <label>Anderson NPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookkeeping_Sale</fullName>
        <active>true</active>
        <label>Bookkeeping Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bookkeeping_Survey</fullName>
        <active>true</active>
        <label>Bookkeeping Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Continuity_Task_Survey</fullName>
        <active>true</active>
        <label>Business Continuity Task Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinosaur_Test</fullName>
        <active>true</active>
        <label>Dinosaur Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entity_Formation</fullName>
        <active>true</active>
        <label>Entity Formation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estate_Planning</fullName>
        <active>true</active>
        <label>Estate Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landing_Page_URLs</fullName>
        <active>true</active>
        <label>Landing Page URLs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Living_Trust_Survey</fullName>
        <active>true</active>
        <label>Living Trust Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPS_45</fullName>
        <active>true</active>
        <label>NPS 45</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPS_Test</fullName>
        <active>true</active>
        <label>NPS Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Survey</fullName>
        <active>true</active>
        <label>Opportunity Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Platinum_Question</fullName>
        <active>true</active>
        <description>Surveys for Platinum Questions</description>
        <label>Platinum Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Platinum_Questions</fullName>
        <active>true</active>
        <label>Platinum Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Platinum_Sale</fullName>
        <active>true</active>
        <label>Platinum Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Sale</fullName>
        <active>true</active>
        <label>Renewal Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Survey</fullName>
        <active>true</active>
        <label>Renewal Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Department</fullName>
        <active>true</active>
        <label>Service Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Survey</fullName>
        <active>true</active>
        <label>Tax Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Task</fullName>
        <active>true</active>
        <label>Tax Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_1</fullName>
        <active>true</active>
        <label>Test 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Score_Survey_Page</fullName>
        <active>true</active>
        <label>Top Score Survey Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Welcome_Call</fullName>
        <active>true</active>
        <label>Welcome Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Welcome_Call_Task_Survey</fullName>
        <active>true</active>
        <label>Welcome Call Task Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>simplesurvey__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>